# gps-tracker

./: .gitignore  README.md
documentation/: navigator_outjob.OutJob
documentation/Gerber_gps_navigator/: .~lock.ajax_gps_navigator_description_v1_0.xlsx#  ajax_gps_navigator_description_v1_0.xlsx
hardware_part/Altium/gps_navigator/: CAMtastic1.Cam  CAMtastic2.Cam  GPS.SchDoc  MCU.SchDoc  Power_System.SchDoc  TYPEC.SchDoc  Top.SchDoc  gps.PcbDoc  gps_navigator.OutJob  gps_navigator.PrjPcb  gps_navigator.PrjPcbStructure
hardware_part/Altium/gps_navigator/Local_Library/: gps_project_pcb_library.PcbLib  gps_project_schematic_library.SchLib
hardware_part/Altium/gps_navigator/Schematic_Template/: Top.SchDot
software_part/navigator/: CMakeLists.txt
software_part/navigator/app/interfaces/: gps.h
software_part/navigator/drivers/inc/: ili_9488.h
software_part/navigator/drivers/src/: gps.c  ili_9488.c
software_part/navigator/main/: CMakeLists.txt  main.c
software_part/navigator/platform_dependencies/inc/: i2c.h  spi.h  system_initialize.h  uart.h
software_part/navigator/platform_dependencies/src/: spi.c  system_initialize.c  uart.c
software_part/navigator_s3/navigator_s3/: CMakeLists.txt
software_part/navigator_s3/navigator_s3/drivers/power_boot/: CMakeLists.txt
software_part/navigator_s3/navigator_s3/main/: CMakeLists.txt  app.c
software_part/navigator_s3/navigator_s3/main/inc/: app.h
software_part/navigator_s3/navigator_s3/main/src/: app.c
software_part/navigator_s3/navigator_s3/system_configs/: CMakeLists.txt  idf_component.yml
(+4 files in other folders)
